
  * Print useful message when package lists are out of date (Closes: #758764)

- Internal changes:

  * Change APT::Changelogs::Server (src/apt_options.cc) from
    http://packages.debian.org/changelogs to
    http://metadata.ftp-master.debian.org/changelogs -- it is the default for a
    few years already.

  * Add function to get URI of a package version

- Documentation:

  * manpage:

    * Separate two elements in --add-user-tag-to description with comma, they
      were displayed together


[2015-10-16]
Version 0.7.4

- New features:

  * [curses] Show providers of virtual packages in "description" area
    (Closes: #103964)

    The description area (bottom half of the screen in the default view) was
    completely empty for virtual packages.  Now it shows the list of "real"
    packages providing the virtual package, in a nicely formatted list.

- Bug fixes:

  * Retrieve again long descriptions (Closes: #801460)

    When disabling the #ifdef of HAVE_DDTP, it was done the wrong way around and
    the old code (untested for many years) compiled fine and didn't cause
    errors, but didn't retrieve long descriptions anymore (it did for short
    ones).

  * Fix for circular dependencies in internal_mark_delete() (Closes: #801430)

    Under some circumstances, when following reverse dependencies of packages to
    be deleted to see if they are automatically installed and unused (so they
    can be pro-actively marked for deletion as well), the function calls itself
    recursively.  In this case, it uses this version with an extra parameter to
    detect when packages were already visited, to avoid infinite loops in the
    case of circular dependencies (bug #801430).

  * Fix race condition replacing ~/.aptitude/config (Closes: #764046)

- User visible changes:

  * [cmdline] In versioned provides, include '=' symbol (Closes: #767393)

    At the moment, there is only one symbol ('='), and it is hardcoded in dpkg