@@ -38,6 +38,8 @@ Version 0.7.5 UNRELEASED
 
   * Add function to get URI of a package version
 
+  * Add function to get the Origin of a package version
+
 - Documentation:
 
   * manpage:
